Added nyan cat as iframe

--- a/index.html
+++ b/index.html
@@ -1,9 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <div>Hello world</div>
-  </body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://rawgit.com/socialwolves/easter-egg/master/nyan/style.css"/>
+</head>
+<body>
+  <div class="sparks-combo">
+    <div class="spark"></div>
+    <div class="spark"></div>
+    <div class="spark"></div>
+    <div class="spark"></div>
+  </div>
+
+  <div id="wave-a" class="hot rainbow"></div>
+  <div id="wave-a" class="cold rainbow"></div>
+
+  <div id="wave-b" class="hot rainbow"></div>
+  <div id="wave-b" class="cold rainbow"></div>
+
+  <div id="nyan-cat" class="frame1">
+    <div id="tail"></div>
+
+    <div id="paws"></div>
+
+    <div id="pop-tarts-body">
+      <div id="pop-tarts-body-cream"></div>
+    </div>
+
+    <div id="head">
+      <div id="face"></div>
+    </div>
+  </div>
+  <!-- Nyan Cat Song -->
+  <audio autoplay="true" loop="true">
+    <source src="https://raw.githubusercontent.com/socialwolves/easter-egg/master/nyan/audio/nyan-cat.ogg" type="audio/ogg" />
+    <source src="https://raw.githubusercontent.com/socialwolves/easter-egg/master/nyan/audio/nyan-cat.mp3" type="audio/mpeg" />
+  </audio>
+  <!-- Libs -->
+  <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <!-- Nyan Stuff -->
+  <script src="https://rawgit.com/socialwolves/easter-egg/master/nyan/index.js"></script>
+</body>
 </html>
