Moved index with nyan to nyan

--- a/nyan/index.html
+++ b/nyan/index.html
@@ -31,7 +31,7 @@
       <div id="face"></div>
     </div>
   </div>
-  <!-- Nyan Cat Song -->
+  <!-- Nyan Cat -->
   <audio autoplay="true" loop="true">
     <source src="https://raw.githubusercontent.com/socialwolves/easter-egg/master/nyan/audio/nyan-cat.ogg" type="audio/ogg" />
     <source src="https://raw.githubusercontent.com/socialwolves/easter-egg/master/nyan/audio/nyan-cat.mp3" type="audio/mpeg" />
